--- a/package.json
+++ b/package.json
@@ -1,22 +1,30 @@
 {
     "private": true,
     "scripts": {
-        "dev": "npm run development",
+        "dev": "vite",
         "development": "mix",
         "watch": "mix watch",
         "watch-poll": "mix watch -- --watch-options-poll=1000",
         "hot": "mix watch --hot",
         "prod": "npm run production",
-        "production": "mix --production"
+        "production": "mix --production",
+        "build": "vite build"
     },
     "devDependencies": {
+        "@tailwindcss/forms": "^0.5.2",
+        "@vitejs/plugin-vue": "^3.0.3",
+        "alpinejs": "^3.4.2",
+        "autoprefixer": "^10.4.2",
         "axios": "^0.21",
         "laravel-mix": "^6.0.6",
+        "laravel-vite-plugin": "^0.5.3",
         "lodash": "^4.17.19",
-        "postcss": "^8.1.14",
+        "postcss": "^8.4.6",
         "resolve-url-loader": "^5.0.0",
         "sass": "^1.52.1",
-        "sass-loader": "^12.6.0"
+        "sass-loader": "^12.6.0",
+        "tailwindcss": "^3.1.0",
+        "vite": "^3.0.7"
     },
     "dependencies": {
         "bootstrap": "^5.1.3"
